<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- Application name -->
    <string name="app_name">Udacity Book Store</string>
    <string name="button_sale_list_item">Sale</string>
    <string name="unknown_author">Unknown author</string>
    <string name="action_delete">Delete</string>
    <string name="action_save">Save</string>
    <string name="empty_view_title_text">It\'s quite lonely here…</string>
    <string name="empty_view_subtitle_text">Get started by adding a book</string>
    <string name="category_overview">Overview</string>
    <string name="hint_book_name">Book Name</string>
    <string name="hint_author_name">Author Name</string>
    <string name="category_genre">Genre</string>
    <string name="category_stock">Stock</string>
    <string name="hint_book_quantity">Quantity</string>
    <string name="unit_book_price">$</string>
    <string name="hint_book_price">Price</string>
    <string name="genre_unknown">Unknown</string>
    <string name="genre_other">Other</string>
    <string name="genre_crime_mistery">Crime / Mystery</string>
    <string name="genre_horror">Horror</string>
    <string name="genre_fantasy">Fantasy</string>
    <string name="genre_children">Children</string>
    <string name="genre_adult">Adult</string>
    <string name="genre_literary_fiction">Literary Fiction</string>
    <string name="genre_historical_fiction">Historical Fiction</string>
    <string name="genre_science_fiction">Science Fiction</string>
    <string name="genre_history">History</string>
    <string name="format_unknown">Unknown</string>
    <string name="format_paperback">Paperback</string>
    <string name="format_hardcover">Hardcover</string>
    <string name="format_ebook">Ebook</string>
    <string name="print_unknown">Unknown</string>
    <string name="print_black_and_white">Black and White</string>
    <string name="print_color">Color</string>
    <string name="category_format">Format</string>
    <string name="category_print">Print</string>
    <string name="hint_language">Language</string>
    <string name="category_supplier">Supplier</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone">Phone</string>
    <string name="editor_activity_delete_book">Delete this book?</string>
    <string name="editor_activity_delete_button">Delete</string>
    <string name="editor_activity_cancel_button">Cancel</string>
    <string name="editor_activity_title_edit_book">Edit book</string>
    <string name="editor_activity_title_add_book">Add book</string>
    <string name="editor_delete_book_success">Book deleted</string>
    <string name="editor_delete_book_failed">Error with deleting book</string>
    <string name="editor_activitity_book_update">Book updated!</string>
    <string name="editor_activity_error_update">Error updating book!</string>
    <string name="editor_activity_insert_error">Error saving book!</string>
    <string name="editor_activity_insert_success">You have inserted book:</string>
    <string name="query_unknown_URI">Cannot query unknown URI</string>
    <string name="unsaved_changes_dialog_message">Discard your changes and quit editing?</string>
    <string name="dialog_discard">Discard</string>
    <string name="dialog_keep_editing">Keep Editing</string>
    <string name="main_activity_data_deleted_success">Data deleted successfully</string>
    <string name="settings_activity_delete_everything">Are you sure you want to delete everything?</string>
    <string name="settings_activity_delete_yes">Yes, delete everything</string>
    <string name="cursor_adapter_book_sold">Book sold!</string>
    <string name="cursor_adapter_error_selling_book">Error selling book!</string>
    <string name="cursor_adapter_negative_quantity_warning">Cannot sell that which you do not have!</string>
    <string name="quantity_label">Quantity:</string>
    <string name="price_label">Price: $</string>
    <string name="settings_default_theme_default">@string/settings_default_theme_value_light</string>
    <string name="settings_default_theme_value_dark">dark</string>
    <string name="settings_default_theme_value_light">light</string>
    <string name="settings_default_theme_label_dark">Dark</string>
    <string name="settings_default_theme_label_light">Light</string>
    <string name="settings_default_theme_label">Default Theme (Main Screen)</string>
    <string name="settings_default_theme_key">default_theme</string>
    <string name="dark_theme_selected">Dark theme selected!</string>
    <string name="light_theme_selected">Light theme selected!</string>
    <string name="settings_erase_text">Using the following button will erase the entire contents of the books database. This action cannot be undone!</string>
    <string name="settings_erase_button">Erase book database</string>
    <string name="main_xml_setup">Setup</string>
    <string name="call_permission_wait">Waiting for call permission to be granted</string>
    <string name="editor_order_book_button">Order book</string>
    <string name="decrease_quantity_error">Can\'t decrease quantity under 0</string>
    <string name="tel_uri_string">tel:</string>
    <string name="book_name_missing">Book requires a name</string>
    <string name="book_format_invalid">Invalid book format</string>
    <string name="invalid_book_print">Invalid book print type</string>
    <string name="invalid_book_genre">Invalid book genre</string>
    <string name="book_price_positive">Book requires a price which must be a positive value</string>
    <string name="book_quantity_positive">The item quantity must be a positive value</string>
    <string name="minus">-</string>
    <string name="plus">+</string>

    <string name="insertion_not_supported">Insertion is not supported for&#032;</string>
    <string name="failed_to_insert_row">Failed to insert row for&#032;</string>
    <string name="update_not_supported">Update is not supported for&#032;</string>
    <string name="deletion_not_supported">Deletion is not supported for&#032;</string>
    <string name="supplier_phone_number_missing">First enter the supplier\'s phone number!</string>


</resources>
